--- a/teaching/cs426/resources.html
+++ b/teaching/cs426/resources.html
@@ -9,7 +9,7 @@
 </head>
 <body style="color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);"
  alink="#fcbf43" link="#fcbf43" vlink="#fcbf43">
-<h1>3460:4/526 RESOURCE PAGE</h1>
+<h1>3460:4/526 FALL 2022 RESOURCE PAGE</h1>
 <h2>LIBRARY</h2>
 <table style="text-align: left; width: 731px; height: 212px;" border="1"
  cellpadding="2" cellspacing="2">
@@ -23,7 +23,7 @@ System Concepts</i> by A. Silberschatz, P.B. Galvin and
 G. Gagne.</li>
         <ul>
           <li>Eighth edition (2008): Available for free at <a
- href="https://olc1.ohiolink.edu/search%7ES0?/Xsilberschatz&amp;SORT=D/Xsilberschatz&amp;SORT=D&amp;SUBKEY=silberschatz/1%2C72%2C72%2CB/frameset&amp;FF=Xsilberschatz&amp;SORT=D&amp;22%2C22%2C">Safari
+ href="https://learning.oreilly.com/library/view/operating-system-concepts/9780470128725/">Safari
 Books Online</a>; <a
  href="http://bcs.wiley.com/he-bcs/Books?action=index&amp;itemId=1119320917&amp;bcsId=11228">book's
 web page</a><br>
@@ -38,7 +38,7 @@ Distributed Software Design</span> (1st Ed., 2003) by Jean Bacon and
 Tim Harris.</li>
         <ul>
           <li>Available for free at <a
- href="https://olc1.ohiolink.edu/search%7ES0?/abacon/abacon/251%2C602%2C3809%2CB/frameset&amp;FF=abacon+jean&amp;8%2C%2C9">Safari
+ href="https://learning.oreilly.com/library/view/operating-systems-concurrent/0321117891/">Safari
 Books
 Online</a>.</li>
         </ul>
@@ -47,7 +47,7 @@ Online</a>.</li>
 Concurrency and Threads</span> (2003) by Kay and Steven Robbins.</li>
         <ul>
           <li>Available for free at <a
- href="https://olc1.ohiolink.edu/search%7ES0?/arobbins/arobbins/501%2C1029%2C4701%2CB/frameset&amp;FF=arobbins+kay&amp;10%2C%2C10">Safari
+ href="https://learning.oreilly.com/library/view/unix-systems-programming/0130424110/">Safari
 Books
 Online</a>.</li>
         </ul>
@@ -181,16 +181,14 @@ Assignment (10e)</span><br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">18: Virtual Machines<br>
-      </td>
-      <td style="vertical-align: top;">SGG 18<br>
-      </td>
-    </tr>
-    <tr>
       <td style="vertical-align: top;">16/17: Protection and Security<br>
       </td>
       <td style="vertical-align: top;">SGG 16.1-16.3, 17.1-17.2,
 17.4-17.7, 17.10, 17.12</td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">18: Virtual Machines</td>
+      <td style="vertical-align: top;">SGG 18</td>
     </tr>
     <tr>
       <td style="vertical-align: top;">19: Networks and Distributed
