--- a/teaching/cs426/homePageGraphics/calendar.htm
+++ b/teaching/cs426/homePageGraphics/calendar.htm
@@ -18,7 +18,7 @@ font-family:Verdana
 <body alink="#af7703" bgcolor="#010516" link="#af7703" text="#ffffff"
  vlink="#fcbf43">
 <b><font color="#868cde" face="Verdana" size="2">COURSE CALENDAR<br>
-&nbsp;&nbsp;&nbsp; Click <a href="../fa21cal.htm" target="_top">here</a>
+&nbsp;&nbsp;&nbsp; Click <a href="../calendar.html" target="_top">here</a>
 .<span style="color: rgb(252, 191, 67);"></span></font></b><br>
 </body>
 </html>
