--- a/teaching/cs426/homePageGraphics/description.htm
+++ b/teaching/cs426/homePageGraphics/description.htm
@@ -34,14 +34,14 @@ font-family:Verdana
         <tbody>
           <tr>
             <td width="100%"> <font face="Verdana"><span
- style="font-weight: bold;">3460:4/526 OPERATING SYSTEMS</span><br>
+ style="font-weight: bold;">CPSC 4/526 OPERATING SYSTEMS</span><br>
             <br>
             </font><span style="font-family: verdana;">Introduction to
 aspects of all modern operating systems: types; storage management;
 process and resource control; interacting process synchronization.<br>
             <br style="font-family: verdana;">
             </span><span style="font-family: verdana;">Prerequisites:
-Completion of 3460:316 and 4450:320 or equivalents with grades of C- or
+Completion of CPSC 316 and CPEN 320 or equivalents with grades of C- or
 better.</span> <br>
             </td>
           </tr>
