--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -21,31 +21,10 @@ font-family:Verdana
 HOMEWORK
 AND PROGRAMS <br>
 &nbsp;&nbsp;&nbsp; Overview HW,
-due February 4.<br>
-&nbsp;&nbsp;&nbsp; Lab 1, due March 4.<br>
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; Part 1A: <a
- href="../labs/lab%201a%20process%20creation%20and%20control.pdf"
- target="_top">description</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="../labs/fork-test.c" target="_top">fork-test.c</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="../labs/fork.c" target="_top">fork.c</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="../labs/fork-data.c" target="_top">fork-data.c</a>.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Part 1B: <a
- href="../labs/lab%201b%20interprocess%20communciation.pdf"
- target="_top">description</a>,<br>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-&nbsp;&nbsp; <a href="../labs/pipe-test.c" target="_top">pipe-test.c</a>.<br>
-&nbsp;&nbsp;&nbsp; Lab 2, due April 1. <a
- href="../labs/lab%202%20bumper%20cars.pdf" target="_top">Description</a>.<br>
-&nbsp;&nbsp;&nbsp; Lab 3, due April 29.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../labs/lab3/lab%203%20simple%20file%20system.pdf" target="_top">Description</a>,
-<a href="../labs/lab3/floppya.img" target="_top">disk image</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../labs/lab3/filesys.c" target="_top">seed
-file</a>.<br>
+due TBD.<br>
+&nbsp;&nbsp;&nbsp; Lab 1, due TBD.<br>
+&nbsp;&nbsp;&nbsp; Lab 2, due TBD.<br>
+&nbsp;&nbsp;&nbsp; Lab 3, due TBD.<br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
 </body>
 </html>
