--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -43,7 +43,11 @@
       <td style="background-color: rgb(0, 0, 0);" valign="top">Aug
 23</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Aug
-24</td>
+24<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+O1 (from slide 14)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Aug
 25<br>
       </td>
