--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -44,20 +44,21 @@
 23</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Aug
 24<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-O1 (from slide 14)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture O1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Aug
 25<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Aug
 26<br>
+      <div style="text-align: center;">Lectures O1, O2<br>
+      </div>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Aug
 29<br>
+      <div style="text-align: center;">Lecture O2 </div>
       <div style="text-align: center;"><span style="font-style: italic;">Sunday:
 last add day</span><br>
       </div>
@@ -67,6 +68,9 @@ last add day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Aug
 31<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+O3 (from start)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 1<br>
