--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -68,15 +68,16 @@ last add day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Aug
 31<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-O3 (from start)</span><br>
-      </div>
+      <div style="text-align: center;">Lectures O3, O4 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 1<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 2<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+O4 (from slide 9)</span><br>
+      </div>
       </td>
     </tr>
     <tr>
