--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -77,6 +77,7 @@ last add day</span><br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Aug
 31<br>
       <div style="text-align: center;">More on GPU Model<br>
+The Thrust Template Library<br>
       <span style="font-style: italic;">Due</span>: HW0<br>
       </div>
       </td>
@@ -116,6 +117,9 @@ Unit 3 (Module 2)</a><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 12<br>
+      <div style="text-align: center;">The Thrust Template Library<br>
+Intro to Low-Level Image Processing<br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
 Quiz 1, Lab 1<br>
       </div>
