--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -75,9 +75,8 @@ last add day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 2<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-O4 (from slide 9)</span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+O4 </div>
       </td>
     </tr>
     <tr>
@@ -93,12 +92,17 @@ Day<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 7<br>
+      <div style="text-align: center;">Lecture O5<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 8<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 9<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+O5, P1</span><br>
+      </div>
       </td>
     </tr>
     <tr>
@@ -163,6 +167,9 @@ Exam</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 7<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 1</span><br>
+      </div>
       </td>
     </tr>
     <tr>
@@ -228,6 +235,9 @@ last withdraw day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 4<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 2</span><br>
+      </div>
       </td>
     </tr>
     <tr>
@@ -302,6 +312,9 @@ Day obs.</span> </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
 2<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 3</span><br>
+      </div>
       </td>
     </tr>
     <tr>
