--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -19,12 +19,16 @@ font-family:Verdana
  vlink="#fcbf43">
 <b><font color="#868cde" face="Verdana" size="2">3460:4/526<br>
 HOMEWORK
-AND PROGRAMS <br>
-&nbsp;&nbsp;&nbsp; Overview HW,
-due TBD.<br>
-&nbsp;&nbsp;&nbsp; Lab 1, due TBD.<br>
-&nbsp;&nbsp;&nbsp; Lab 2, due TBD.<br>
-&nbsp;&nbsp;&nbsp; Lab 3, due TBD.<br>
+AND PROGRAMS<br>
+&nbsp;&nbsp;&nbsp; Lab 1, due October 7.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../labs/lab%201%20linux%20shell.pdf">Description</a>, <a
+ href="../labs/myshell.c">seed file</a>.<br>
+&nbsp;&nbsp;&nbsp; Lab 2, due November 4.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description.<br>
+&nbsp;&nbsp;&nbsp; Lab 3, due December 2.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, disk image,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; seed file.<br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
 </body>
 </html>
