--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -100,18 +100,25 @@ Day<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 9<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-O5, P1</span><br>
+      <div style="text-align: center;">Lectures
+O5, P1<br>
       </div>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-12</td>
+12<br>
+      <div style="text-align: center;">Lecture P1<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-14</td>
+14<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P1</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 15<br>
       </td>
