--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -119,6 +119,7 @@ Unit 3 (Module 2)</a><br>
 12<br>
       <div style="text-align: center;">The Thrust Template Library<br>
 Intro to Low-Level Image Processing<br>
+Embarrassingly Parallel Examples<br>
       </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
 Quiz 1, Lab 1<br>
@@ -144,6 +145,11 @@ Unit 4 (Module 3)</a><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 19<br>
+      <div style="text-align: center;">Embarrassingly Parallel Examples<br>
+Monte Carlo Methods<br>
+      <span style="font-style: italic;">Due</span>:
+HW1, Quiz 2<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 20</td>
@@ -163,6 +169,9 @@ Unit 5</a><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 26<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
+Lab 2, Lab 3<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 27<br>
