--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -153,12 +153,11 @@ HW1, Quiz 2<br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 20</td>
-      <td style="background-color: rgb(51, 204, 255);" valign="top">Sept
+      <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 21<br>
       <div
- style="text-align: center; background-color: rgb(51, 204, 255);"><a
- href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online
-Unit 5</a><br>
+ style="text-align: center; background-color: rgb(51, 102, 255);">Work
+day, CAS 241<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
