--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -115,8 +115,8 @@ O5, P1<br>
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 14<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P1</span><br>
+      <div style="text-align: center;">Lecture
+P1<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
@@ -124,24 +124,37 @@ P1</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 16<br>
+      <div style="text-align: center;">Lecture
+P1 </div>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 19<br>
+      <div style="text-align: center;">Lecture P2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 20</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-21</td>
+21<br>
+      <div style="text-align: center;">Lecture
+P3 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 22</td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-23</td>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="color: rgb(255, 255, 255);">Sept
+23<br>
+      </span>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P3 (from slide 28)</span><br>
+      </div>
+      </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-26<br>
+      <td style="background-color: rgb(51, 102, 255);" valign="top"><span
+ style="color: rgb(255, 255, 255);">Sept
+26</span><br>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 27<br>
@@ -166,7 +179,7 @@ P1</span><br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 5<br>
       <div style="text-align: center;"><span style="font-style: italic;">Midterm
-Exam</span><br>
+Exam (Units O, P through ?)</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
