--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -146,7 +146,6 @@ Unit 4 (Module 3)</a><br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 19<br>
       <div style="text-align: center;">Embarrassingly Parallel Examples<br>
-Monte Carlo Methods<br>
       <span style="font-style: italic;">Due</span>:
 HW1, Quiz 2<br>
       </div>
@@ -168,6 +167,9 @@ day, CAS 241<br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 26<br>
+      <div style="text-align: center;">Monte Carlo Methods<br>
+Performance Considerations Overview<br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
 Lab 2, Lab 3<br>
       </div>
@@ -193,6 +195,8 @@ Unit 6 (Module 4A)</a><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 3<br>
+      <div style="text-align: center;">Catch-up and Review<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 4<br>
