--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -146,15 +146,18 @@ P3 </div>
  style="color: rgb(255, 255, 255);">Sept
 23<br>
       </span>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P3 (from slide 28)</span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+P3 </div>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top"><span
  style="color: rgb(255, 255, 255);">Sept
-26</span><br>
+26<br>
+      </span>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P3 (from slide 42)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 27<br>
