--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -167,8 +167,9 @@ day, CAS 241<br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 26<br>
-      <div style="text-align: center;">Monte Carlo Methods<br>
-Performance Considerations Overview<br>
+      <div style="text-align: center;">Performance Considerations
+Overview<br>
+Monte Carlo Methods<br>
       </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
 Lab 2, Lab 3<br>
