--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -24,7 +24,8 @@ AND PROGRAMS<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
  href="../labs/lab%201%20linux%20shell.pdf" target="_top">Description</a>, <a
  href="../labs/myshell.c" target="_top">seed file</a>.<br>
-&nbsp;&nbsp;&nbsp; Lab 2, due November 4.<br>
+&nbsp;&nbsp;&nbsp; Lab 2, due November 4.&nbsp;
+	<a href="../labs/lab%202%20pthreads%20and%20sems.pdf" target="_top">Description.</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description.<br>
 &nbsp;&nbsp;&nbsp; Lab 3, due December 2.<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, disk image,<br>
