--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -155,21 +155,25 @@ P3 </div>
  style="color: rgb(255, 255, 255);">Sept
 26<br>
       </span>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P3 (from slide 42)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture
+P3 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 27<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 28<br>
+      <div style="text-align: center;">Lecture
+P3 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 29<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 30<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P3 (review), P4</span><br>
+      </div>
       </td>
     </tr>
     <tr>
@@ -181,8 +185,8 @@ P3 (from slide 42)</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 5<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Midterm
-Exam (Units O, P through ?)</span><br>
+      <div style="text-align: center;">Midterm
+Exam (Units O, P through P3)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
