--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -171,14 +171,23 @@ P3 </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 30<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P3 (review), P4</span><br>
-      </div>
+      <div style="text-align: center;">Lectures
+P3, P4 </div>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-3<br>
+      <td style="background-color: rgb(51, 204, 255);" valign="top"><span
+ style="color: rgb(0, 0, 0);">Oct
+3</span><br style="color: rgb(0, 0, 0);">
+      <div
+ style="text-align: center; background-color: rgb(51, 204, 255);"><span
+ style="color: rgb(0, 0, 0);">Online videos: <a
+ href="http://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part1.mov">vid1</a>,
+      <a
+ href="http://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part3.mov">vid2</a>,
+      <a
+ href="http://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part4.mov">vid3</a></span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 4<br>
@@ -194,6 +203,9 @@ Exam (Units O, P through P3)<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 7<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P4 (from slide 17)</span><br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Lab 1</span><br>
       </div>
