--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -181,12 +181,7 @@ P3, P4 </div>
 3</span><br style="color: rgb(0, 0, 0);">
       <div
  style="text-align: center; background-color: rgb(51, 204, 255);"><span
- style="color: rgb(0, 0, 0);">Online videos: <a
- href="http://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part1.mov">vid1</a>,
-      <a
- href="http://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part3.mov">vid2</a>,
-      <a
- href="http://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part4.mov">vid3</a></span><br>
+ style="color: rgb(0, 0, 0);">Online videos: vid1, vid2, vid3</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
@@ -203,9 +198,8 @@ Exam (Units O, P through P3)<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 7<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P4 (from slide 17)</span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+P4 </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Lab 1</span><br>
       </div>
@@ -214,6 +208,8 @@ Lab 1</span><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 10<br>
+      <div style="text-align: center;">Lecture
+P4 </div>
       <div style="text-align: center;"><span style="font-style: italic;">Sunday:
 last withdraw day</span><br>
       </div>
@@ -221,7 +217,11 @@ last withdraw day</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 11</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-12</td>
+12<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+P4, P5</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
@@ -372,6 +372,7 @@ Lab 3</span><br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
 9<br>
       <div style="text-align: center;">Final exam scheduled 12:15<br>
+(P4, P5; Units M, D, F, X)<br>
       </div>
       </td>
     </tr>
