--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -168,9 +168,7 @@ day, CAS 241<br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 26<br>
       <div style="text-align: center;">Performance Considerations
-Overview<br>
-Monte Carlo Methods<br>
-      </div>
+Overview </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
 Lab 2, Lab 3<br>
       </div>
@@ -196,6 +194,9 @@ Unit 6 (Module 4A)</a><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 3<br>
+      <div style="text-align: center;">Performance Considerations
+Overview (cont.)<br>
+      </div>
       <div style="text-align: center;">Catch-up and Review<br>
       </div>
       </td>
@@ -244,6 +245,11 @@ Unit 8 (Module 4B)</a><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 17<br>
+      <div style="text-align: center;">Monte Carlo Methods<br>
+More examples<br>
+      <span style="font-style: italic;">Due</span>:
+Lab 4, Quiz 3<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 18<br>
@@ -264,7 +270,13 @@ Unit 9 (Modules 4C, 5)</a><br>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-24</td>
+24<br>
+      <div style="text-align: center;">Review Midterm Exam and HW<br>
+      </div>
+      <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
+HW2, HW3, Quiz 4, Project proposal<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 25<br>
       </td>
