--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -218,24 +218,33 @@ last withdraw day</span><br>
 11</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 12<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-P4, P5</span><br>
+      <div style="text-align: center;">Lectures
+P4, P5<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-14</td>
+14<br>
+      <div style="text-align: center;">Lecture
+P5<br>
+      </div>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 17<br>
+      <div style="text-align: center;">Lectures P5, M1<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 18<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 19<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+M1 (from slide 5)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 20<br>
