--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -271,7 +271,9 @@ Unit 9 (Modules 4C, 5)</a><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 24<br>
-      <div style="text-align: center;">Review Midterm Exam and HW<br>
+      <div style="text-align: center;">More examples (cont.)<br>
+Review Midterm Exam and HW<br>
+Parallel computation patterns<br>
       </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
 HW2, HW3, Quiz 4, Project proposal<br>
