--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -242,30 +242,37 @@ P5<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 19<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-M1 (from slide 5)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture M1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 20<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-21</td>
+21<br>
+      <div style="text-align: center;">Lecture M1 </div>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-24</td>
+24<br>
+      <div style="text-align: center;">Lectures M1. M2<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 25<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 26<br>
+      <div style="text-align: center;">Lecture M2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 27<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 28<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+M2 (from slide 34)</span><br>
+      </div>
       </td>
     </tr>
     <tr bgcolor="#ffffff">
