--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -271,9 +271,7 @@ Unit 9 (Modules 4C, 5)</a><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 24<br>
-      <div style="text-align: center;">More examples (cont.)<br>
-Review Midterm Exam and HW<br>
-Parallel computation patterns<br>
+      <div style="text-align: center;">Review Midterm Exam and HW<br>
       </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due</span>:
 HW2, HW3, Quiz 4, Project proposal<br>
@@ -300,6 +298,12 @@ Unit 10 (Module 6)</a><br>
     <tr bgcolor="#ffffff">
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 31<br>
+      <div style="text-align: center;">Review HW3<br>
+      </div>
+      <div style="text-align: center;">More examples (cont.)<br>
+Parallel computation patterns<br>
+      <span style="font-style: italic;">Due</span>: Quiz 5<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 1<br>
@@ -439,6 +443,23 @@ talks<br>
     </tr>
   </tbody>
 </table>
+<br>
+GROUP PROJECTS<br>
+Veena Prathima Anche and Sai Kaushik Pagadala, <span
+ style="font-style: italic;">Parallel Breadth First Search</span><br>
+Taylor Burgess and Ahmed Darwich, <span style="font-style: italic;">Radix
+Sort vs Thrust Library</span><br>
+Josh Cunningham and Sai Satya Sruthi Reddy, <span
+ style="font-style: italic;">Markov Decision Process</span><br>
+Nikhil Khandelwal and Doug Rudy, <span style="font-style: italic;">Gauss-Jordan
+elimination</span><br>
+Andrew Murphy, <span style="font-style: italic;">Parallelizing the
+PageRank Algorithm</span><br>
+Sai Jyothi Ongole, <span style="font-style: italic;">Edge Detection
+Algorithms</span><br>
+Jie Zhang, <span style="font-style: italic;">Discrete Fourier
+Transforms</span><br>
+<br>
 <span style="font-style: italic;">
 <script language="JavaScript">document.write("<br>Tentative plans in italics. Last updated " + document.lastModified + ".");
 today = new Date();
