--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -298,12 +298,10 @@ Unit 10 (Module 6)</a><br>
     <tr bgcolor="#ffffff">
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 31<br>
-      <div style="text-align: center;">Review HW3<br>
-      </div>
-      <div style="text-align: center;">More examples (cont.)<br>
-Parallel computation patterns<br>
-      <span style="font-style: italic;">Due</span>: Quiz 5<br>
-      </div>
+      <div style="text-align: center;"><>Review HW3</><br>
+      <>Parallel computation patterns</><br>
+      <> <span style="font-style: italic;">Due</span>: Quiz 5</><br>
+      <> </></div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 1<br>
@@ -326,12 +324,20 @@ Unit 11 (Module 7)</a><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 7<br>
+      <div style="text-align: center;">Parallel computation patterns
+(cont.)<br>
+Parallel Reduction Case Study<br>
+      <span style="font-style: italic;">Due</span>:
+Quiz 6<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 8<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 9<br>
+      <div style="text-align: center;">More examples (cont.)<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 10<br>
@@ -363,6 +369,7 @@ Unit 12 (Module 11)</a><br>
  style="text-align: center; background-color: rgb(51, 204, 255);"><a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs677/">Online
 Unit 13</a><br>
+      <span style="font-style: italic;">Due</span>: Lab 5, Lab 6, Quiz 7<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
@@ -403,6 +410,7 @@ Unit 14</a><br>
       <div
  style="text-align: center; background-color: rgb(102, 0, 204);">Student
 talks<br>
+      <span style="font-style: italic;">Due</span>: Project report<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
