--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -270,20 +270,22 @@ P5<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 28<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-M2 (from slide 34)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture M2 </div>
       </td>
     </tr>
     <tr bgcolor="#ffffff">
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 31<br>
+      <div style="text-align: center;">Lectures M2, D1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 1<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 2<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+D1 (from slide 10)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 3<br>
