--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -298,10 +298,10 @@ Unit 10 (Module 6)</a><br>
     <tr bgcolor="#ffffff">
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 31<br>
-      <div style="text-align: center;"><>Review HW3</><br>
-      <>Parallel computation patterns</><br>
-      <> <span style="font-style: italic;">Due</span>: Quiz 5</><br>
-      <> </></div>
+      <div style="text-align: center;">Review HW3<br>
+Parallel computation patterns<br>
+&nbsp; <span style="font-style: italic;">Due</span>: Quiz 5<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 1<br>
