--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -27,8 +27,12 @@ AND PROGRAMS<br>
 &nbsp;&nbsp;&nbsp; Lab 2, due November 4.&nbsp;
 	<a href="../labs/lab%202%20pthreads%20and%20sems.pdf" target="_top">Description.</a><br>
 &nbsp;&nbsp;&nbsp; Lab 3, due December 2.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, disk image,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; seed file.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../labs/lab3/lab%203%20simple%20file%20system.pdf" target="_top">Description</a>,
+<a href="../labs/lab3/floppya.img" target="_top">disk image</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../labs/lab3/filesys.c" target="_top">seed
+file</a>.<br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
 </body>
 </html>
