--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -283,29 +283,28 @@ P5<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 2<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-D1 (from slide 10)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture D1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 3<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 4<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 2</span><br>
-      </div>
+      <div style="text-align: center;">Lecture D1 </div>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 7<br>
+      <div style="text-align: center;">Lectures D1, D2<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 8<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 9<br>
+      <div style="text-align: center;">Lecture D2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 10<br>
@@ -314,6 +313,13 @@ Lab 2</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 11<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+D2 (from slide 12)</span><br>
+      </div>
+      <span style="font-style: italic;"> </span>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 2</span><br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">&nbsp;</span><span
  style="font-style: italic;">Veteran's
 Day obs.</span> </div>
