--- a/teaching/cs677/calendar.html
+++ b/teaching/cs677/calendar.html
@@ -327,6 +327,7 @@ Unit 11 (Module 7)</a><br>
       <div style="text-align: center;">Parallel computation patterns
 (cont.)<br>
 Parallel Reduction Case Study<br>
+More examples (cont.)<br>
       <span style="font-style: italic;">Due</span>:
 Quiz 6<br>
       </div>
@@ -337,6 +338,7 @@ Quiz 6<br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 9<br>
       <div style="text-align: center;">More examples (cont.)<br>
+Parallel sorting case study<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
@@ -381,7 +383,15 @@ Unit 13</a><br>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-21</td>
+21<br>
+      <div style="text-align: center;">Parallel sorting case study
+(cont.)<br>
+      </div>
+      <div style="text-align: center;">CUDA and MPI<br>
+      </div>
+      <div style="text-align: center;">Summary<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 22</td>
       <td style="background-color: rgb(51, 204, 255);" valign="top">Nov
@@ -453,20 +463,26 @@ talks<br>
 </table>
 <br>
 GROUP PROJECTS<br>
+<span style="font-style: italic;">Monday November 28</span><br>
 Veena Prathima Anche and Sai Kaushik Pagadala, <span
  style="font-style: italic;">Parallel Breadth First Search</span><br>
 Taylor Burgess and Ahmed Darwich, <span style="font-style: italic;">Radix
-Sort vs Thrust Library</span><br>
-Josh Cunningham and Sai Satya Sruthi Reddy, <span
- style="font-style: italic;">Markov Decision Process</span><br>
-Nikhil Khandelwal and Doug Rudy, <span style="font-style: italic;">Gauss-Jordan
-elimination</span><br>
+Sort vs Thrust Library</span><span style="font-style: italic;"></span><span
+ style="font-style: italic;"></span><br>
 Andrew Murphy, <span style="font-style: italic;">Parallelizing the
-PageRank Algorithm</span><br>
-Sai Jyothi Ongole, <span style="font-style: italic;">Edge Detection
-Algorithms</span><br>
+PageRank Algorithm</span><span style="font-style: italic;"></span><br>
 Jie Zhang, <span style="font-style: italic;">Discrete Fourier
-Transforms</span><br>
+Transforms<br>
+<br>
+Wednesday November 30<br>
+</span>Josh Cunningham and Sai Satya Sruthi Reddy, <span
+ style="font-style: italic;">Markov Decision Process<br>
+</span>Nikhil Khandelwal and Doug Rudy, <span
+ style="font-style: italic;">Gauss-Jordan
+elimination<br>
+</span>Sai Jyothi Ongole, <span style="font-style: italic;">Edge
+Detection
+Algorithms</span><br>
 <br>
 <span style="font-style: italic;">
 <script language="JavaScript">document.write("<br>Tentative plans in italics. Last updated " + document.lastModified + ".");
