--- a/teaching/index.html
+++ b/teaching/index.html
@@ -27,11 +27,11 @@
 <h2>Teaching Schedule<br>
 </h2>
 <ul>
-  <li><a href="cs426/index.html">3460:4/526 - Operating Systems (Fall
-'22 and Spring '23)</a></li>
-  <li>3460:4/540 - Compiler Design (Spring '23)<br>
+  <li>CPSC 316 - Data Structures (Spring '23)<br>
   </li>
-  <li><a href="cs677/index.html">3460:677 - Parallel Processing (Fall
+  <li><a href="cs426/index.html">CPSC 4/526 - Operating Systems (Fall
+'22 and Spring '23)</a></li>
+  <li><a href="cs677/index.html">CPSC 677 - Parallel Processing (Fall
 '22)</a><br>
   </li>
 </ul>
@@ -39,14 +39,14 @@
 <ul>
   <li>3460:209 - Computer Science I</li>
   <li>3460:210 - Computer Science II</li>
-  <li>3460:316 - Data Structures<br>
-  </li>
   <li>3460:389 - Intermediate Topics in
 Computer Science: Cloud
 Computing<br>
   </li>
   <li>3460:4/521 - Object-Oriented
 Programming</li>
+  <li>3460:4/540 - Compiler Design<br>
+  </li>
   <li>3460:4/577 - Introduction to Parallel
 Processing<br>
   </li>
