--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -313,9 +313,8 @@ P5<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 11<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-D2 (from slide 12)</span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lectures
+D2, F1 </div>
       <span style="font-style: italic;"> </span>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Lab 2</span><br>
@@ -327,12 +326,17 @@ Day obs.</span> </div>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-14</td>
+14<br>
+      <div style="text-align: center;">Lecture F1 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 15<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 16<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+F2 (from start)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 17<br>
@@ -346,8 +350,20 @@ Day obs.</span> </div>
 21</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 22</td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-23</td>
+      <td
+ style="background-color: rgb(51, 204, 255); color: rgb(0, 0, 0);"
+ valign="top">Nov
+23<br>
+      <div style="text-align: center;">Chapter 18 <a
+ href="https://codex.cs.yale.edu/avi/os-book/OS10/slide-dir/PPTX-dir/ch18.pptx">notes</a><br>
+      <span style="color: rgb(0, 0, 0);">Online: <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/lecture18a.mp4">vid1</a>,
+      <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/lecture18b.mp4">vid2</a>,
+      <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/lecture18c.mp4">vid3</a></span><br>
+      </div>
+      </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Nov
 24<br>
       <div style="text-align: center;"><span style="font-style: italic;">Thanksgiving</span><br>
