--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -334,8 +334,8 @@ Day obs.</span> </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 16<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-F2 (from start)</span><br>
+      <div style="text-align: center;">Lecture
+F2<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
@@ -343,18 +343,23 @@ F2 (from start)</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 18<br>
+      <div style="text-align: center;">Lecture F2 </div>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-21</td>
+21<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+X1 (from start)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 22</td>
       <td
  style="background-color: rgb(51, 204, 255); color: rgb(0, 0, 0);"
  valign="top">Nov
 23<br>
-      <div style="text-align: center;">Chapter 18 <a
+      <div style="text-align: center;">Lecture X2/Chapter 18 <a
  href="https://codex.cs.yale.edu/avi/os-book/OS10/slide-dir/PPTX-dir/ch18.pptx">notes</a><br>
       <span style="color: rgb(0, 0, 0);">Online: <a
  href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/lecture18a.mp4">vid1</a>,
@@ -379,18 +384,26 @@ F2 (from start)</span><br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 28<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+X1 (from ?)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 29<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 30<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+X1 (from ?), X5</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
 1<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
 2<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Review</span><br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Lab 3</span><br>
       </div>
