--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -20,19 +20,15 @@ font-family:Verdana
 <b><font color="#868cde" face="Verdana" size="2">3460:4/526<br>
 HOMEWORK
 AND PROGRAMS<br>
-&nbsp;&nbsp;&nbsp; Lab 1, due October 7.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../labs/lab%201%20linux%20shell.pdf" target="_top">Description</a>, <a
- href="../labs/myshell.c" target="_top">seed file</a>.<br>
-&nbsp;&nbsp;&nbsp; Lab 2, due November 4.&nbsp;
-	<a href="../labs/lab%202%20pthreads%20and%20sems.pdf" target="_top">Description.</a><br>
-&nbsp;&nbsp;&nbsp; Lab 3, due December 2.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../labs/lab3/lab%203%20simple%20file%20system.pdf" target="_top">Description</a>,
-<a href="../labs/lab3/floppya.img" target="_top">disk image</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../labs/lab3/filesys.c" target="_top">seed
-file</a>.<br>
+&nbsp;&nbsp;&nbsp; Lab 1, due TBD.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, seed file.<br>
+&nbsp;&nbsp;&nbsp; Lab 2, due TBD.&nbsp;
+	Description.<br>
+&nbsp;&nbsp;&nbsp; Lab 3, due TBD.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description,
+disk image,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; seed
+file.<br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
 </body>
 </html>
