--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -17,7 +17,7 @@ font-family:Verdana
 </head>
 <body alink="#af7703" bgcolor="#010516" link="#af7703" text="#ffffff"
  vlink="#fcbf43">
-<b><font color="#868cde" face="Verdana" size="2">3460:4/526<br>
+<b><font color="#868cde" face="Verdana" size="2">CPSC 4/526<br>
 HOMEWORK
 AND PROGRAMS<br>
 &nbsp;&nbsp;&nbsp; Lab 1, due TBD.<br>
