--- a/teaching/index.html
+++ b/teaching/index.html
@@ -27,12 +27,12 @@
 <h2>Teaching Schedule<br>
 </h2>
 <ul>
-  <li>CPSC 316 - Data Structures (Spring '23)<br>
+  <li><a href="cs316/index.html>CPSC 316 - Data Structures (Spring '23)</a><br>
   </li>
   <li><a href="cs426/index.html">CPSC 4/526 - Operating Systems (Fall
 '22 and Spring '23)</a></li>
-  <li><a href="cs677/index.html">CPSC 677 - Parallel Processing (Fall
-'22)</a><br>
+  <li>CPSC 677 - Parallel Processing (Fall
+'22)<br>
   </li>
 </ul>
 <h2>Previous Courses</h2>
