--- a/teaching/index.html
+++ b/teaching/index.html
@@ -27,7 +27,7 @@
 <h2>Teaching Schedule<br>
 </h2>
 <ul>
-  <li><a href="cs316/index.html>CPSC 316 - Data Structures (Spring '23)</a><br>
+  <li><a href="cs316/index.html">CPSC 316 - Data Structures (Spring '23)</a><br>
   </li>
   <li><a href="cs426/index.html">CPSC 4/526 - Operating Systems (Fall
 '22 and Spring '23)</a></li>
