--- a/teaching/cs316/homePageGraphics/instructor.htm
+++ b/teaching/cs316/homePageGraphics/instructor.htm
@@ -32,9 +32,11 @@ O'Neil</span><br>
  style="font-style: italic; color: rgb(252, 191, 67);">edu</span><br>
 &nbsp;&nbsp;&nbsp; Office Hours:<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span
- style="color: rgb(252, 191, 67);">Mon/Weds 2:15 - 3:45 PM.</span></font></b><b><font
- color="#868cde" face="Verdana" size="2"><span
- style="color: rgb(252, 191, 67);"></span></font></b><br
+ style="color: rgb(252, 191, 67);">Tues/Thurs 3:15 - 4:30 PM.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mon 10:30 AM, Weds 1:30 PM<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; in
+Polsky.</span></font></b><b><font color="#868cde" face="Verdana"
+ size="2"><span style="color: rgb(252, 191, 67);"></span></font></b><br
  style="color: rgb(252, 191, 67);">
 <b><font color="#868cde" face="Verdana" size="2"><span
  style="color: rgb(252, 191, 67);"></span><span
@@ -43,3 +45,5 @@ O'Neil</span><br>
 appointment.</span></font></b><br>
 </body>
 </html>
+
+
