--- a/teaching/honors/index.html
+++ b/teaching/honors/index.html
@@ -50,10 +50,12 @@ Honors Faculty Advisor: </span>Dr. Tim O'Neil<span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
- style="font-weight: bold;">For
-Students Graduating in&nbsp; Fall 2022</span><br>
+ style="font-weight: bold;"></span><span style="font-weight: bold;">For
+Students Graduating in Spring 2023<br>
+</span>
 <ul>
-  <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
+  <li>CS majors: be registered for <span
+ style="color: rgb(255, 102, 102);">2-3
 credits</span>
 of <span style="color: rgb(255, 102, 102);">CPSC 497 Individual Study
 in
@@ -68,97 +70,6 @@ prior semester</span></span><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span></li>
-  <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
-credits</span>
-of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
-Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
- style="font-weight: bold;">Fall 2022 </span>semester.<br>
-    </span></span></li>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">At most <span
- style="font-weight: bold; text-decoration: underline;">six</span><span
- style="font-weight: bold;"> </span>credits
-of CPSC 497/498 count towards graduation; schedule accordingly.</span></span></li>
-  </ul>
-  <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">CS majors: complete the course
-substitution
-paperwork so 497/498 will
-count as a c.s. elective.</span></span></li>
-  <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);"></span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">Have
-a faculty sponsor in place and
-be&nbsp;</span></span><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">working on your project</span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span></li>
-  <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);"><span style="font-style: italic;">Estimated
-    </span>deadlines </span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">(recommended
-by Honors College; <a
- href="http://www.uakron.edu/honors/curriculum/honors-research-project-curriculum.dot">see
-here</a>):</span></span></li>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Proposal submission for honors research
-project </span></span><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">through <a
- href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
-Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
- style="font-weight: bold;"></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">
-      </span></span>Tuesday March 1 2022&nbsp; (<span
- style="font-style: italic;">already passed</span>)<span
- style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
- style="font-style: italic;"></span><span style="font-style: italic;"></span><span
- style="font-weight: bold;"> </span><span style="font-style: italic;"></span></li>
-  </ul>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
- style="font-weight: bold;">Friday November 11 2022<br>
-      </span></span></span></li>
-  </ul>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Subsequent draft to readers: <span
- style="font-weight: bold;">Friday November 18 2022</span></span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span></li>
-  </ul>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Final draft to sponsor and readers: <span
- style="font-weight: bold;">Tuesday November 22 2022 </span>(3 weeks
-before grades are due)</span></span></li>
-    <li>Final electronic submission of completed project report with
-all signatures <span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">to <a
- href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
-Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
- style="font-weight: bold;">Friday December 2 2022<br>
-      </span></li>
-    <ul>
-      <li><span style="font-weight: bold;">Remember to include your
-abstract or the system won't permit the upload!</span></li>
-    </ul>
-  </ul>
-</ul>
-<span style="font-weight: bold;">For
-Students Graduating in Spring 2023<br>
-</span>
-<ul>
-  <li>CS majors: be registered for <span
- style="color: rgb(255, 102, 102);">2-3
-credits</span>
-of <span style="color: rgb(255, 102, 102);">CPSC 497 Individual Study
-in
-Computer </span><span style="color: rgb(255, 102, 102);">Science<span
- style="color: rgb(0, 0, 0);"> </span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">for
-the <span style="font-weight: bold;">Fall 2022 </span>semester</span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span></li>
   <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
 credits</span>
 of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
@@ -199,8 +110,8 @@ Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">
       </span></span><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);"><span
- style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Monday October 3 2022</span><span
+ style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span>Monday
+October 3 2022 (<span style="font-style: italic;">already passed</span>)<span
  style="font-weight: bold;"> </span><span style="font-style: italic;"></span></li>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
@@ -284,8 +195,8 @@ Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">
       <span
- style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Thursday December 1 2022</span><span
+ style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span>Thursday
+December 1 2022 (<span style="font-style: italic;">already passed</span>)<span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"> </span><span
@@ -321,6 +232,103 @@ abstract or the system won't permit the upload!</span></li>
     </ul>
   </ul>
 </ul>
+<span style="font-weight: bold;">For
+Students Graduating in&nbsp; Fall 2023</span><br>
+<ul>
+  <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
+credits</span>
+of <span style="color: rgb(255, 102, 102);">CPSC 497 Individual Study
+in
+Computer </span><span style="color: rgb(255, 102, 102);">Science<span
+ style="color: rgb(0, 0, 0);"> </span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">for
+the <span style="font-weight: bold;">Spring 2023 </span>semester</span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span></li>
+  <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
+credits</span>
+of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
+Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
+ style="font-weight: bold;">Fall 2023 </span>semester.<br>
+    </span></span></li>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">At most <span
+ style="font-weight: bold; text-decoration: underline;">six</span><span
+ style="font-weight: bold;"> </span>credits
+of CPSC 497/498 count towards graduation; schedule accordingly.</span></span></li>
+  </ul>
+  <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">CS majors: complete the course
+substitution
+paperwork so 497/498 will
+count as a c.s. elective.</span></span></li>
+  <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);"></span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">Have
+a faculty sponsor in place and
+be&nbsp;</span></span><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">working on your project</span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span></li>
+  <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);"><span style="font-style: italic;">Estimated
+    </span>deadlines </span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">(recommended
+by Honors College; <a
+ href="http://www.uakron.edu/honors/curriculum/honors-research-project-curriculum.dot">see
+here</a>):</span></span></li>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Proposal submission for honors research
+project </span></span><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">through <a
+ href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
+Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
+ style="font-weight: bold;"></span><span
+ style="color: rgb(255, 102, 102); font-weight: bold;"><span
+ style="color: rgb(0, 0, 0);"> Wednesday </span></span><span
+ style="font-weight: bold;">March 1 2023</span> <span
+ style="font-style: italic;"></span><span style="font-weight: bold;"></span><span
+ style="font-weight: bold;"></span><span style="font-style: italic;"></span><span
+ style="font-style: italic;"></span><span style="font-weight: bold;"> </span><span
+ style="font-style: italic;"></span></li>
+  </ul>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
+ style="font-weight: bold;">Friday November 17 2023<br>
+      </span></span></span></li>
+  </ul>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Subsequent draft to readers: <span
+ style="font-weight: bold;">Friday November 24 2023</span></span></span></li>
+    <ul>
+      <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);"><span style="font-weight: bold;">This is
+the Friday after Thanksgiving; plan accordingly.<br>
+        </span></span></span></li>
+    </ul>
+  </ul>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Final draft to sponsor and readers: <span
+ style="font-weight: bold;">Tuesday November 28 2023 </span>(3 weeks
+before grades are due)</span></span></li>
+    <li>Final electronic submission of completed project report with
+all signatures <span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">to <a
+ href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
+Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
+ style="font-weight: bold;">Friday December 8 2023<br>
+      </span></li>
+    <ul>
+      <li><span style="font-weight: bold;">Remember to include your
+abstract or the system won't permit the upload!</span></li>
+    </ul>
+  </ul>
+</ul>
 <span style="font-weight: bold;">Other
 Honors Students</span><br>
 <span style="font-weight: bold;"></span><span style="font-weight: bold;"></span>
@@ -341,13 +349,6 @@ Honors distribution courses</span> by <span style="font-weight: bold;">April
 attend the Sophomore symposium in January.</li>
   <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Proposal submission for honors research
-project, <span style="font-weight: bold;">Fall 2023 </span>grads:<span
- style="font-weight: bold;"> </span></span></span><span
- style="font-weight: bold;">Wednesday </span><span
- style="font-weight: bold;">March 1 2023 </span>(<span
- style="font-style: italic;">estimated</span>)</li>
-  <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Proposal submission for honors research
 project, <span style="font-weight: bold;">Spring 2024 </span>grads: <span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
  style="font-weight: bold;">Monday October 2 2023 </span>(<span
@@ -357,6 +358,13 @@ project, <span style="font-weight: bold;">Spring 2024 </span>grads: <span
 project, <span style="font-weight: bold;">Summer 2024 </span>grads: <span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
  style="font-weight: bold;">Friday December 1 2023 </span>(<span
+ style="font-style: italic;">estimated</span>)</li>
+  <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Proposal submission for honors research
+project, <span style="font-weight: bold;">Fall 2024 </span>grads:<span
+ style="font-weight: bold;"> </span></span></span><span
+ style="font-weight: bold;">Friday </span><span
+ style="font-weight: bold;">March 1 2024 </span>(<span
  style="font-style: italic;">estimated</span>)</li>
 </ul>
 <span style="font-weight: bold;">Important Notes<br>
