--- a/teaching/cs316/homePageGraphics/description.htm
+++ b/teaching/cs316/homePageGraphics/description.htm
@@ -34,14 +34,16 @@ font-family:Verdana
         <tbody>
           <tr>
             <td width="100%"> <font face="Verdana"><span
- style="font-weight: bold;">3460:4/526 OPERATING SYSTEMS</span><br>
+ style="font-weight: bold;">CPSC 316 DATA STRUCTURES</span><br>
             <br>
-            </font><span style="font-family: verdana;">Introduction to
-aspects of all modern operating systems: types; storage management;
-process and resource control; interacting process synchronization.<br>
+            </font><span style="font-family: verdana;">A continuation
+of topics in CPSC 210. Topics include: graphs and graph algorithms,
+external sorting, hashing, advanced tree and file structures.</span><span
+ style="font-size: 9.5pt; line-height: 107%; font-family: &quot;Calibri&quot;,sans-serif;"></span><span
+ style="font-family: verdana;"><br>
             <br style="font-family: verdana;">
             </span><span style="font-family: verdana;">Prerequisites:
-Completion of 3460:316 and 4450:320 or equivalents with grades of C- or
+Completion of CPSC 210 and (MATH 221 or MATH 210) with grades of C- or
 better.</span> <br>
             </td>
           </tr>
