--- a/teaching/honors/index.html
+++ b/teaching/honors/index.html
@@ -34,7 +34,7 @@ Science</span><br>
   </tbody>
 </table>
 <span style="font-weight: bold;"><br>
-Honors Faculty Advisor: </span>Dr. Tim O'Neil<span
+Honors Faculty Advisor: </span>Prof. Zhong-Hui Duan<span
  style="font-weight: bold;"><br>
 </span><span style="font-weight: bold;"></span>
 <span style="color: rgb(255, 102, 102);"><span
