--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -20,8 +20,23 @@ font-family:Verdana
 <b><font color="#868cde" face="Verdana" size="2">CPSC 316<br>
 HOMEWORK
 AND PROGRAMS <br>
-&nbsp;&nbsp;&nbsp; Coming soon.<br>
+<br>
+&nbsp;&nbsp;&nbsp; <a href="analysis%20tools%20hw.pdf" target="_top">Analysis Tools
+HW</a><br>
+&nbsp;&nbsp;&nbsp; Due in-class January 24<br>
+<br>
+&nbsp;&nbsp;&nbsp; Project 1 - Palindromes<br>
+&nbsp;&nbsp;&nbsp; Due February 16<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project1/proj1%20palindromes.pdf" target="_top">Description</a>, <a
+ href="../project1/makefile">makefile</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project1/PalindromeI.hpp">PalindromeI</a>, <a
+ href="../project1/PalindromeR.hpp">PalindromeR</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project1/test_palindrome.cpp">test_palindrome</a><br>
+<br>
+&nbsp;&nbsp;&nbsp; Projects 2, 3 coming soon.<br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
 </body>
 </html>
-
