--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -21,7 +21,7 @@ font-family:Verdana
 HOMEWORK
 AND PROGRAMS <br>
 <br>
-&nbsp;&nbsp;&nbsp; <a href="analysis%20tools%20hw.pdf" target="_top">Analysis Tools
+&nbsp;&nbsp;&nbsp; <a href="../analysis%20tools%20hw.pdf" target="_top">Analysis Tools
 HW</a><br>
 &nbsp;&nbsp;&nbsp; Due in-class January 24<br>
 <br>
