--- a/teaching/honors/placement.html
+++ b/teaching/honors/placement.html
@@ -32,7 +32,7 @@ courses<br>
     </tr>
     <tr>
       <td
- style="vertical-align: top; background-color: rgb(153, 255, 153);">3450:221
+ style="vertical-align: top; background-color: rgb(153, 255, 153);">MATH 221
 Analytic Geometry-Calculus I<br>
       </td>
       <td
@@ -44,13 +44,13 @@ Analytic Geometry-Calculus I<br>
 - 36<br>
       </td>
       <td
- style="vertical-align: top; background-color: rgb(153, 255, 153);">3450:149,
+ style="vertical-align: top; background-color: rgb(153, 255, 153);">MATH 149,
 C- or better<br>
       </td>
     </tr>
     <tr>
       <td
- style="vertical-align: top; background-color: rgb(153, 255, 153);">3450:208
+ style="vertical-align: top; background-color: rgb(153, 255, 153);">MATH 208
 Introduction to Discrete Math<br>
       </td>
       <td rowspan="2"
@@ -62,22 +62,22 @@ Introduction to Discrete Math<br>
 - 27<br>
       </td>
       <td
- style="vertical-align: top; background-color: rgb(153, 255, 153);">3450:145,
+ style="vertical-align: top; background-color: rgb(153, 255, 153);">MATH 145,
 C- or better<br>
       </td>
     </tr>
     <tr>
       <td
- style="vertical-align: top; background-color: rgb(153, 255, 153);">3450:149
-Precalculus<br>
+ style="vertical-align: top; background-color: rgb(153, 255, 153);">MATH 149
+Precalculus Mathematics<br>
       </td>
       <td
- style="vertical-align: top; background-color: rgb(153, 255, 153);">3450:145,
+ style="vertical-align: top; background-color: rgb(153, 255, 153);">MATH 145,
 C- or better<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">3450:145 College Algebra<br>
+      <td style="vertical-align: top;">MATH 145 Algebra for Calculus<br>
       </td>
       <td style="vertical-align: top; text-align: center;">500 - 559<br>
       </td>
@@ -87,8 +87,7 @@ C- or better<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">3450:135 Excursions in
-Mathematics<br>
+      <td style="vertical-align: top;">MATH 135 Mathematics for Everyday Life<br>
       </td>
       <td style="vertical-align: top; text-align: center;">460 - 499<br>
       </td>
@@ -127,7 +126,7 @@ English score<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">3300:112 English Composition II<br>
+      <td style="vertical-align: top;">ENGL 112 English Composition II<br>
       </td>
       <td style="vertical-align: top; text-align: center;">620 - 800<br>
       </td>
@@ -135,7 +134,7 @@ English score<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">3300:111 English Composition I<br>
+      <td style="vertical-align: top;">ENGL 111 English Composition I<br>
       </td>
       <td style="vertical-align: top; text-align: center;">430 - 619<br>
       </td>
