--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -42,12 +42,15 @@
       <td
  style="vertical-align: top; background-color: rgb(51, 102, 255);">Jan
 10<br>
+      <div style="text-align: center;">Intro, Lectures 1 and 2<br>
+      </div>
       </td>
       <td style="vertical-align: top;">Jan 11<br>
       </td>
       <td
  style="vertical-align: top; background-color: rgb(51, 102, 255);">Jan
 12<br>
+      <div style="text-align: center;">Lectures 2 and 3 </div>
       </td>
       <td style="vertical-align: top;">Jan 13<br>
       </td>
@@ -60,7 +63,11 @@
       </center>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 17</td>
+ valign="top">Jan 17<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+3 (from slide 10)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 18</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 19</td>
@@ -73,7 +80,11 @@ last drop day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 24</td>
+ valign="top">Jan 24<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Analysis Tools HW</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 25</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 26</td>
@@ -103,7 +114,11 @@ last drop day</span><br>
  valign="top">Feb 14</td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 15</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Feb 16</td>
+ valign="top">Feb 16<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Project 1</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Feb 17</td>
     </tr>
     <tr>
