--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -51,6 +51,7 @@
       <td
  style="vertical-align: top; background-color: rgb(51, 102, 255);">Jan
 12<br>
+      <div style="text-align: center;">Lecture O1 </div>
       </td>
       <td style="vertical-align: top;">Jan 13<br>
       </td>
@@ -63,7 +64,11 @@
       </center>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
- valign="top">Jan 17</td>
+ valign="top">Jan 17<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+O1 (from slide 40), O2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Jan 18</td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Jan 19</td>
